# kinova_arm_apps

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
ros/config/: boundary_safety.yaml  joint_angles.yaml
ros/launch/: closest_obj.launch  kinova_arm.launch  kinova_moveit_client.launch  kinova_vision_rgbd.launch  pick_place.launch
ros/scripts/: closed_loop_pick_base_controller  kinova_moveit_client.py  pick_and_place.py
ros/src/kinova_arm_apps/: closest_obj.cpp  full_arm_movement.py  segment.cpp
